RESOLVED FIXED225675
[iOS] Mail compose web view doesn't scroll to reveal the selection in certain configurations
https://bugs.webkit.org/show_bug.cgi?id=225675
Summary [iOS] Mail compose web view doesn't scroll to reveal the selection in certain...
Wenson Hsieh
Reported 2021-05-11 15:53:20 PDT
Attachments
Patch (12.20 KB, patch)
2021-05-11 16:12 PDT, Wenson Hsieh
no flags
For landing (12.04 KB, patch)
2021-05-11 16:54 PDT, Wenson Hsieh
no flags
Wenson Hsieh
Comment 1 2021-05-11 16:12:57 PDT
Wenson Hsieh
Comment 2 2021-05-11 16:49:52 PDT
Comment on attachment 428324 [details] Patch Thanks for the review! (I will tweak the ChangeLog entry as discussed on Slack)
Wenson Hsieh
Comment 3 2021-05-11 16:54:15 PDT
Created attachment 428328 [details] For landing
EWS
Comment 4 2021-05-11 20:46:36 PDT
Committed r277352 (237610@main): <https://commits.webkit.org/237610@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 428328 [details].
Note You need to log in before you can comment on or make changes to this bug.